--- a/Final Year Project/Final Year Project.csproj
+++ b/Final Year Project/Final Year Project.csproj
@@ -26,16 +26,19 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="2.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.4" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" PrivateAssets="All" />
+    <PackageReference Include="MimeSharp" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\asstes\" />
     <Folder Include="wwwroot\adminpanel\" />
+    <Folder Include="wwwroot\WebData\FacultyPic\" />
   </ItemGroup>
 
   <ItemGroup>
