--- a/Final Year Project/appsettings.json
+++ b/Final Year Project/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Final_Year_Project-83BD8024-2103-4B96-8178-6A43DBC9E9D5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Final_Year_Project-83BD8024-2103-4B96-8178-6A43DBC9E9D5;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MyCs": "Server=DESKTOP-S88RNC4\\SQLEXPRESS;Database=USKT;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
